5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1771_1583.log
== TEST (2019-05-22 23:56:27) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
banana = str(num) + "."
print(banana)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:00:27) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
c = 3
while(c<len(num)):
	num[c] = str(num[c]) + "."
	c = c + 3
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:03:13) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
c = 3
while(c<len(num)):
	str(num[c]) = str(num[c]) + "."
	c = c + 3
print(num)
-- ERROR:
File "XXXX", line 5
    str(num[c]) = str(num[c]) + "."
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:19:35) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:19:57) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:20:17) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 3
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:20:43) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i+1%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:21:55) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:22:05) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:23:25) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i!= 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:23:40) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 1
while(i<len(num)):
	if(i%3 == 0 and i!= 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:23:55) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 1
while(i<len(num)):
	if(i%3 == 0 and i!= 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:24:06) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 1
while(i<len(num)):
	if(i%3 == 0 and i!= 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:25:53) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 1
while(i<len(num)):
	if(i%3 == 0 and i!= 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:26:24) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 1
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:26:38) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i!=0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:27:25) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%2 == 0 and i!=0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:28:07) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i!=0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:29:08) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i!=0):
		copy = copy + str(num[i-1]) + "."
	else:
		copy = copy + str(num[i-1])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:30:43) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:32:56) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i+1]) + "."
	else:
		copy = copy + str(num[i+1])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:33:52) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i8]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:33:55) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:34:00) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:34:37) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i-1]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:35:56) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:38:07) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i>= 3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:38:13) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i>= 3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:38:17) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i>= 3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:38:20) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i>= 3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:38:30) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i> 3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:38:58) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i>=3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:40:00) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0 and i>=2):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:44:00) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i+2<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i+2]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:44:29) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i+2]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:45:00) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if(i+2%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:51:23) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 2
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:51:38) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:51:47) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 1
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:52:52) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 1
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	elif(c>i):
		copy = copy + ""
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:53:05) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	elif(c>i):
		copy = copy + ""
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:53:38) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	elif(c>i):
		copy = copy + ""
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 2
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:54:13) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0 and c<i):
		copy = copy + str(num[c]) + "."
	elif(c>i):
		copy = copy + ""
	else:
		copy = copy + str(num[c])
	i = i + 1
	c = c + 2
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:55:16) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[c]) + "."
	else:
		copy = copy + str(num[c])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:56:18) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i>=3):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 00:56:30) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i>=2):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:08:30) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:08:43) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:09:07) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if(i+2%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:09:43) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+2)%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:09:55) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+3)%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:10:04) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:10:55) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<len(num)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:11:07) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<9:
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
File "XXXX", line 7
    if((i+1)%3 == 0 and i<9:
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:11:12) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<9):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:11:25) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<8):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:11:47) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:11:53) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 01:12:06) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- EXECUTION TIME:
0.524979
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:13:00) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:13:08) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
c = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:15:06) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 01:16:28) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:55:47) 
-- CODE:
from numpy import *
num = input("digite o numero: ")
copy = ""
i = 0
while(i<len(num)):
	if((i+1)%3 == 0 and i<(len(num)-1)):
		copy = copy + str(num[i]) + "."
	else:
		copy = copy + str(num[i])
	i = i + 1
print(copy)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
